# CG

./: .gitignore  CMakeLists.txt  README.md  funcoes.cpp  main.cpp  td1.cpp  td2.cpp  td3.cpp
lib/: Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  funcoes.cpp  funcoes.h
